--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" [tabTitle]="tab1Title" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" [tabTitle]="tab2Title" tabIcon="search"></ion-tab>
-  <ion-tab [root]="tab3Root" [tabTitle]="tab3Title" tabIcon="cog"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Boliches" tabIcon="musical-notes"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Beerpoints" tabIcon="beer"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Perfil" tabIcon="person"></ion-tab>
 </ion-tabs>
